@@ -15,7 +15,7 @@ CLEANFILES = $(BUILT_SOURCES) f90_dep.mak
 LAGRANGIAN = erosion_transport_interp.f90
 
 liberosion_a_SOURCES = erosion.f90 erosion_types.f90 erosion_setup.f90 erosion_io.f90 erosion_version.f90 \
-                       erosion_advect.f90 geometry.f90 glimmer_coordinates.f90 runge_kutta.f90 sparse.f90 \
+                       erosion_advect.f90 geometry.f90 glimmer_coordinates.f90 runge_kutta.f90 \
                        glimmer_interpolate2d.f90 $(LAGRANGIAN)
 
 simple_erosion_SOURCES = simple_erosion.f90
@@ -27,15 +27,18 @@ eis_erosion_LDADD = liberosion.a -lclimate -lglide -lglimmer -lslap
 test_transport_SOURCES = test_transport.f90
 test_transport_LDADD = liberosion.a -lclimate -lglide -lglimmer -lslap
 
-test_integrate2d_SOURCES = test_integrate2d.f90 erosion_integrate2d.f90 sparse.f90 geometry.f90 glimmer_coordinates.f90
+test_integrate2d_SOURCES = test_integrate2d.f90 erosion_integrate2d.f90 geometry.f90 glimmer_coordinates.f90
+test_integrate2d_LDADD = -lglimmer
 
-test_interpolate2d_SOURCES = test_interpolate2d.f90 sparse.f90 geometry.f90 glimmer_coordinates.f90 glimmer_interpolate2d.f90
+test_interpolate2d_SOURCES = test_interpolate2d.f90 geometry.f90 glimmer_coordinates.f90 glimmer_interpolate2d.f90
+test_interpolate2d_LDADD = -lglimmer
 
 test_geometry_SOURCES = test_geometry.f90 geometry.f90
 
 test_rk4_SOURCES = test_rk4.f90 runge_kutta.f90
 
-test_advect_SOURCES = test_advect.f90 erosion_advect.f90 runge_kutta.f90 glimmer_coordinates.f90 glimmer_interpolate2d.f90 sparse.f90
+test_advect_SOURCES = test_advect.f90 erosion_advect.f90 runge_kutta.f90 glimmer_coordinates.f90 glimmer_interpolate2d.f90
+test_advect_LDADD = -lglimmer
 
 #some special rules for automatically generating ncdf src code
 erosion_io.f90:	erosion_vars.def @GLIMMER_PREFIX@/share/glimmer/ncdf_template.f90.in
